samples/InspectionApp/src/Salesforce/objects/Inspection_Step__c.object
<CustomObject>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Photo__c, &quot;Photo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>Inspection</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipName>Inspection_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affirmative/Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success/Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Inspection Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Inspection Step</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>